--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ img
     transform-style: preserve-3d;
     perspective: 600px;
     transition: 0.5s;
+    
 }
 .card .front
 {
@@ -36,6 +37,7 @@ img
     transform: rotateX(0deg);
     transition: 0.5s;
     text-align: center;
+    box-shadow: 4px 4px 3px 2px black;
 }
 .card:hover .front
 {
@@ -54,6 +56,7 @@ img
     transition: 0.5s;
     color: #F3DEF1;
     text-align: center;
+    box-shadow: 4px 4px 3px 2px rgba(238, 121, 226, 0.836);
 }
 .card .back:before
 {
